[project]
name = "pypes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juanguerrero09", email = "juanguerrero09mc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
